--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ gunicorn==21.2.0
 Jinja2==3.1.2
 kiwisolver==1.4.5
 MarkupSafe==2.1.3
-matplotlib @ file:///C:/Users/Allison/Documents/careerfoundry/django-code-prac/bookstore_app/src/matplotlib-3.3.4-cp38-cp38-win_amd64.whl#sha256=493f4737714f8976dd0441c576aac29a7411c508311d7479e31a7fc7d4b23313
+matplotlib==3.3.4
 numpy==1.24.4
 packaging==23.2
 pandas==2.0.3
