--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ packaging==23.2
 pandas==2.0.3
 Pillow==10.1.0
 platformdirs==3.10.0
-psycopg2-binary==2.9.1
+psycopg2==2.9.1
 pyparsing==3.1.1
 python-dateutil==2.8.2
 pytz==2023.3.post1
